Automatically label incoming slack messages

--- a/hypsibius-slack/pyproject.toml
+++ b/hypsibius-slack/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 slack-sdk = "^3.21.3"
 aiohttp = "^3.8.4"
 environ-config = "^23.2.0"
+slack-bolt = "^1.18.0"
 
 
 [build-system]
