--- a/llm/pyproject.toml
+++ b/llm/pyproject.toml
@@ -16,6 +16,7 @@ gpt4all = "^0.3.4"
 torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}
 hypsibius-slack = {path = "../hypsibius-slack", develop = true}
 scikit-learn = "^1.2.2"
+span-marker = "^1.2.3"
 
 
 [tool.poetry.group.dev.dependencies]
