--- a/llm/pyproject.toml
+++ b/llm/pyproject.toml
@@ -23,6 +23,10 @@ span-marker = "^1.2.3"
 flake8 = "^6.0.0"
 mypy = "^1.3.0"
 black = "^23.3.0"
+notebook = "^6.5.4"
+ipython = "^8.14.0"
+tqdm = "^4.65.0"
+ipywidgets = "^8.0.6"
 
 
 
