--- a/platform/resources/slack/slack.secret.yaml
+++ b/platform/resources/slack/slack.secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: slack-secrets
+  namespace: slack
 type: Opaque
 data:
   slack-signing-secret: ZTdlNDUwNWJiODRlM2VlYmQ3OTdiMDViMzQxNzhhMWM=
