--- a/platform/functions/slack-app-home-opened/package.json
+++ b/platform/functions/slack-app-home-opened/package.json
@@ -1,7 +1,7 @@
 {
   "name": "event-handler",
   "version": "0.1.0",
-  "description": "TypeScript HTTP Handler",
+  "description": "TypeScript CloudEvent Handler",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -13,7 +13,7 @@
     "test:unit": "ts-node node_modules/tape/bin/tape test/unit.ts",
     "test:integration": "ts-node node_modules/tape/bin/tape test/integration.ts",
     "test": "npm run test:unit && npm run test:integration",
-    "start": "FUNC_LOG_LEVEL=info hypsibius-faas-js-runtime ./build/index.js --include-raw",
+    "start": "FUNC_LOG_LEVEL=info faas-js-runtime ./build/index.js",
     "lint": "eslint \"src/**/*.{js,ts,tsx}\" \"test/**/*.{js,ts,tsx}\" --quiet",
     "debug": "nodemon --inspect ./node_modules/faas-js-runtime/bin/cli.js ./build/index.js"
   },
@@ -34,9 +34,8 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@dapr/dapr": "^3.1.2",
-    "@hypsibius/faas-js-runtime": "^2.2.11",
-    "@slack/bolt": "^3.13.1",
-    "@types/node": "^16.11.12"
+    "@types/node": "^16.11.12",
+    "cloudevents": "^6.0.4",
+    "faas-js-runtime": "^1.1.0"
   }
 }
