--- a/platform/resources/slack/rabbit.broker.config.yaml
+++ b/platform/resources/slack/rabbit.broker.config.yaml
@@ -2,8 +2,9 @@ apiVersion: eventing.knative.dev/v1alpha1
 kind: RabbitmqBrokerConfig
 metadata:
   name: rabbit-broker-config
-  namespace: rabbit
+  namespace: slack
 spec:
   rabbitmqClusterReference:
     name: rabbit-cluster
+    namespace: rabbit
   queueType: quorum
