--- a/platform/functions/slack-events/package.json
+++ b/platform/functions/slack-events/package.json
@@ -34,8 +34,8 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@dapr/dapr": "^3.1.2",
     "@hypsibius/faas-js-runtime": "^2.2.11",
+    "@hypsibius/knative-faas-utils": "^0.0.6",
     "@slack/bolt": "^3.13.1",
     "@types/node": "^16.11.12"
   }
