--- a/platform/functions/slack-send-message/package.json
+++ b/platform/functions/slack-send-message/package.json
@@ -34,10 +34,11 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@hypsibius/knative-faas-utils": "^0.0.6",
+    "@hypsibius/knative-faas-utils": "^0.0.5",
     "@hypsibius/message-types": "^0.0.3",
+    "@slack/bolt": "^3.13.1",
     "@types/node": "^16.11.12",
-    "cloudevents": "^7.0.2",
+    "cloudevents": "^6.0.4",
     "faas-js-runtime": "^1.1.0"
   }
 }
