--- a/platform/functions/slack-mongo-installation-manager/package.json
+++ b/platform/functions/slack-mongo-installation-manager/package.json
@@ -13,7 +13,7 @@
     "test:unit": "ts-node node_modules/tape/bin/tape test/unit.ts",
     "test:integration": "ts-node node_modules/tape/bin/tape test/integration.ts",
     "test": "npm run test:unit && npm run test:integration",
-    "start": "faas-js-runtime ./build/index.js --include-raw",
+    "start": "FUNC_LOG_LEVEL=info faas-js-runtime ./build/index.js",
     "lint": "eslint \"src/**/*.{js,ts,tsx}\" \"test/**/*.{js,ts,tsx}\" --quiet",
     "debug": "nodemon --inspect ./node_modules/faas-js-runtime/bin/cli.js ./build/index.js"
   },
@@ -34,12 +34,9 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@hypsibius/knative-faas-utils": "^0.0.10",
     "@hypsibius/message-types": "^0.0.10",
-    "@slack/bolt": "^3.13.1",
     "@types/node": "^16.11.12",
-    "axios": "^1.4.0",
-    "faas-js-runtime": "^2.2.2",
-    "node-mocks-http": "^1.12.2"
+    "faas-js-runtime": "^1.1.0",
+    "mongoose": "^7.3.4"
   }
 }
