--- a/platform/resources/mongodb/mongodb.replicaset.yaml
+++ b/platform/resources/mongodb/mongodb.replicaset.yaml
@@ -13,11 +13,19 @@ spec:
   users:
     - name: root
       db: admin
-      passwordSecretRef: # a reference to the secret that will be used to generate the user's password
+      passwordSecretRef:
         name: root-password
       roles:
         - name: root
           db: admin
+      scramCredentialsSecretName: root-scram
+    - name: slack-conf-admin
+      db: admin
+      passwordSecretRef:
+        name: slack-conf-admin-password
+      roles:
+        - name: dbOwner
+          db: slack-conf
       scramCredentialsSecretName: hypsibius-scram
   additionalMongodConfig:
     storage.wiredTiger.engineConfig.journalCompressor: zlib
@@ -30,3 +38,12 @@ metadata:
 type: Opaque
 data:
   password: cm9vdA==
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: slack-conf-admin-password
+  namespace: mongodb
+type: Opaque
+data:
+  password: SHlwc2liaXVz
