--- a/platform/functions/slack-app-home-opened/package.json
+++ b/platform/functions/slack-app-home-opened/package.json
@@ -8,6 +8,7 @@
     "url": ""
   },
   "scripts": {
+    "install-utils": "rm -rf ./utils && mkdir -p ./utils && tar -cO ../../utils | tar -x && npm i --save ./utils/*",
     "build": "npx -p typescript tsc",
     "pretest": "npm run lint && npm run build",
     "test:unit": "ts-node node_modules/tape/bin/tape test/unit.ts",
@@ -34,8 +35,8 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@hypsibius/knative-faas-utils": "^0.0.8",
-    "@hypsibius/message-types": "^0.0.4",
+    "@hypsibius/knative-faas-utils": "file:utils/knative-faas-utils",
+    "@hypsibius/message-types": "file:utils/message-types",
     "@types/node": "^16.11.12",
     "cloudevents": "^7.0.2",
     "faas-js-runtime": "^1.1.0"
