--- a/platform/utils/message-types/package.json
+++ b/platform/utils/message-types/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.18",
   "description": "Types package for messages between Hypsibius Platform functions",
   "scripts": {
+    "publish": "npm run build && ../../functions/update.bash",
     "build": "npx -p typescript tsc",
     "pretest": "npm run lint && npm run build",
     "prepare": "npm run build",
@@ -33,7 +34,7 @@
     "@types/node": "^20.4.1"
   },
   "dependencies": {
-    "@slack/bolt": "^3.13.1",
+    "@slack/bolt": "^3.13.2",
     "mongoose": "^7.3.4"
   }
 }
