Change eventing topology

--- a/platform/resources/eventing/triggers/slack/app-home-opened.trigger.yaml
+++ b/platform/resources/eventing/triggers/slack/app-home-opened.trigger.yaml
@@ -1,16 +1,15 @@
 apiVersion: eventing.knative.dev/v1
 kind: Trigger
 metadata:
-  name: slack-app-installation-success
+  name: slack-app-home-opened
   namespace: slack
 spec:
-  broker: rabbit-broker
+  broker: default
   filter:
     attributes:
-      type: slack_app_installation_success
+      type: app_home_opened
   subscriber:
     ref:
       apiVersion: v1
       kind: Service
-      name: slack-handle-app-installation
-      namespace: slack
+      name: slack-app-home-opened
