--- a/platform/resources/eventing/sinks/slack-app-home-opened.sink-binding.yaml
+++ b/platform/resources/eventing/sinks/slack-app-home-opened.sink-binding.yaml
@@ -1,18 +1,19 @@
 apiVersion: sources.knative.dev/v1
 kind: SinkBinding
 metadata:
-  name: slack-handle-app-installation-rabbit-binding
+  name: slack-app-home-opened
   namespace: slack
 spec:
   subject:
     apiVersion: apps/v1
     kind: Deployment
+    namespace: slack
     selector:
       matchLabels:
-        function.knative.dev/name: slack-handle-app-installation
+        function.knative.dev/name: slack-app-home-opened
   sink:
     ref:
       apiVersion: eventing.knative.dev/v1
       kind: Broker
-      name: rabbit-broker
-      namespace: slack
+      name: default
+      namespace: eventing
