--- a/platform/resources/eventing/triggers/mongodb/slack-user-installed-app.trigger.yaml
+++ b/platform/resources/eventing/triggers/mongodb/slack-user-installed-app.trigger.yaml
@@ -1,16 +1,15 @@
 apiVersion: eventing.knative.dev/v1
 kind: Trigger
 metadata:
-  name: slack-send-message
-  namespace: slack
+  name: slack-user-installed-app
+  namespace: mongodb
 spec:
-  broker: rabbit-broker
+  broker: default
   filter:
     attributes:
-      type: slack_send_message
+      type: slack_user_installed_app
   subscriber:
     ref:
       apiVersion: v1
       kind: Service
-      name: slack-send-message
-      namespace: slack
+      name: slack-handle-user-installed
