--- a/platform/resources/mongodb/mongodb.replicaset.yaml
+++ b/platform/resources/mongodb/mongodb.replicaset.yaml
@@ -27,6 +27,27 @@ spec:
         - name: dbOwner
           db: slack-conf
       scramCredentialsSecretName: hypsibius-scram
+  statefulSet:
+    spec:
+      template:
+        spec:
+          containers:
+            - name: "mongodb-agent"
+              resources:
+                requests:
+                  cpu: 50m
+                  memory: 100M
+                limits:
+                  cpu: 500m
+                  memory: 300M
+            - name: "mongod"
+              resources:
+                requests:
+                  cpu: 100m
+                  memory: 500M
+                limits:
+                  cpu: 2000m
+                  memory: 2000M
   additionalMongodConfig:
     storage.wiredTiger.engineConfig.journalCompressor: zlib
 ---
