Fix eventing rabbit config

--- a/platform/resources/eventing/broker.defaults.configmap.yaml
+++ b/platform/resources/eventing/broker.defaults.configmap.yaml
@@ -11,5 +11,5 @@ data:
       apiVersion: eventing.knative.dev/v1alpha1
       kind: RabbitmqBrokerConfig
       name: rabbit-broker-config
-      namespace: eventing
+      namespace: knative-eventing
 
