--- a/platform/resources/slack/slack.configmap.yaml
+++ b/platform/resources/slack/slack.configmap.yaml
@@ -4,4 +4,4 @@ metadata:
   name: slack-config
   namespace: slack
 data:
-  app.scopes: chat:write,channels:history,channels:read,commands,dnd:read,files:read,groups:history,groups:read,im:history,im:read,metadata.message:read,mpim:history,mpim:read,team:read,users.profile:read,users:read,users:read.email
+  app.scopes: chat:write,channels:history,channels:join,channels:read,commands,dnd:read,files:read,groups:history,groups:read,im:history,im:read,metadata.message:read,mpim:history,mpim:read,team:read,users.profile:read,users:read,users:read.email
