--- a/platform/resources/mongodb/mongodb.replicaset.yaml
+++ b/platform/resources/mongodb/mongodb.replicaset.yaml
@@ -68,3 +68,51 @@ metadata:
 type: Opaque
 data:
   password: SHlwc2liaXVz
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: conf-mongodb-0-svc
+  namespace: mongodb
+spec:
+  type: NodePort
+  selector:
+    app: conf-mongodb-svc
+    statefulset.kubernetes.io/pod-name: conf-mongodb-0
+  ports:
+    - protocol: TCP
+      nodePort: 30717
+      port: 27017
+      targetPort: 27017
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: conf-mongodb-1-svc
+  namespace: mongodb
+spec:
+  type: NodePort
+  selector:
+    app: conf-mongodb-svc
+    statefulset.kubernetes.io/pod-name: conf-mongodb-1
+  ports:
+    - protocol: TCP
+      nodePort: 30718
+      port: 27017
+      targetPort: 27017
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: conf-mongodb-2-svc
+  namespace: mongodb
+spec:
+  type: NodePort
+  selector:
+    app: conf-mongodb-svc
+    statefulset.kubernetes.io/pod-name: conf-mongodb-2
+  ports:
+    - protocol: TCP
+      nodePort: 30719
+      port: 27017
+      targetPort: 27017
