--- a/platform/utils/knative-faas-utils/package.json
+++ b/platform/utils/knative-faas-utils/package.json
@@ -14,6 +14,17 @@
   },
   "main": "build/index.js",
   "types": "build/index.d.ts",
+  "exports": {
+    ".": "./build/index.js",
+    "./utils": "./build/utils/index.js"
+  },
+  "typesVersions": {
+    "*": {
+      "utils": [
+        "build/utils/index.d.ts"
+      ]
+    }
+  },
   "files": [
     "build/**/*"
   ],
