App home shows config

--- a/platform/resources/4-rabbitmq/rabbit.cluster.yaml
+++ b/platform/resources/4-rabbitmq/rabbit.cluster.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: rabbit
+  labels:
+    name: rabbit
+---
 apiVersion: rabbitmq.com/v1beta1
 kind: RabbitmqCluster
 metadata:
