--- a/platform/resources/6-eventing/triggers/mongodb/app-home-opened.trigger.yaml
+++ b/platform/resources/6-eventing/triggers/mongodb/app-home-opened.trigger.yaml
@@ -2,7 +2,7 @@ apiVersion: eventing.knative.dev/v1
 kind: Trigger
 metadata:
   name: slack-app-home-opened
-  namespace: slack
+  namespace: mongodb
 spec:
   broker: default
   filter:
