--- a/platform/functions/slack-app-home-opened.cloudevents/package.json
+++ b/platform/functions/slack-app-home-opened.cloudevents/package.json
@@ -14,7 +14,7 @@
     "test:unit": "ts-node node_modules/tape/bin/tape test/unit.ts",
     "test:integration": "ts-node node_modules/tape/bin/tape test/integration.ts",
     "test": "npm run test:unit && npm run test:integration",
-    "start": "FUNC_LOG_LEVEL=info faas-js-runtime ./build/index.js",
+    "start": "FUNC_LOG_LEVEL=debug faas-js-runtime ./build/index.js",
     "lint": "eslint \"src/**/*.{js,ts,tsx}\" \"test/**/*.{js,ts,tsx}\" --quiet",
     "debug": "nodemon --inspect ./node_modules/faas-js-runtime/bin/cli.js ./build/index.js"
   },
@@ -37,8 +37,10 @@
   "dependencies": {
     "@hypsibius/knative-faas-utils": "file:tarballs/hypsibius-knative-faas-utils-0.0.13.tgz",
     "@hypsibius/message-types": "file:tarballs/hypsibius-message-types-0.0.18.tgz",
+    "@slack/web-api": "^6.8.1",
     "@types/node": "^16.11.12",
     "cloudevents": "^7.0.2",
-    "faas-js-runtime": "^1.1.0"
+    "faas-js-runtime": "^1.1.0",
+    "mongoose": "^7.4.1"
   }
 }
