--- a/platform/resources/6-eventing/triggers/global-funcs/error.trigger.yaml
+++ b/platform/resources/6-eventing/triggers/global-funcs/error.trigger.yaml
@@ -7,7 +7,7 @@ spec:
   broker: default
   filter:
     attributes:
-      type: error
+      type: hypsibius.error
   subscriber:
     ref:
       apiVersion: v1
