--- a/platform/resources/6-eventing/triggers/mongodb/slack-member-joined-channel.trigger.yaml
+++ b/platform/resources/6-eventing/triggers/mongodb/slack-member-joined-channel.trigger.yaml
@@ -7,7 +7,7 @@ spec:
   broker: default
   filter:
     attributes:
-      type: member_joined_channel
+      type: slack.event.member_joined_channel
   subscriber:
     ref:
       apiVersion: v1
