--- a/platform/resources/6-eventing/triggers/slack/slack-app-installation-success.trigger.yaml
+++ b/platform/resources/6-eventing/triggers/slack/slack-app-installation-success.trigger.yaml
@@ -7,7 +7,7 @@ spec:
   broker: default
   filter:
     attributes:
-      type: slack_app_installation_success
+      type: hypsibius.slack.app_installation_success
   subscriber:
     ref:
       apiVersion: v1
