--- a/platform/resources/0-namespaces.yaml
+++ b/platform/resources/0-namespaces.yaml
@@ -1,6 +1,27 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: observability
+  labels:
+    name: observability
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: knative-eventing
+  labels:
+    name: knative-eventing
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: knative-serving
+  labels:
+    name: knative-serving
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: slack
   labels:
     name: slack
