--- a/platform/resources/6-eventing/triggers/mongodb/app-home-opened.trigger.yaml
+++ b/platform/resources/6-eventing/triggers/mongodb/app-home-opened.trigger.yaml
@@ -7,7 +7,7 @@ spec:
   broker: default
   filter:
     attributes:
-      type: app_home_opened
+      type: slack.event.app_home_opened
   subscriber:
     ref:
       apiVersion: v1
