--- a/platform/resources/6-eventing/triggers/mongodb/slack-group-left.trigger.yaml
+++ b/platform/resources/6-eventing/triggers/mongodb/slack-group-left.trigger.yaml
@@ -7,7 +7,7 @@ spec:
   broker: default
   filter:
     attributes:
-      type: group_left
+      type: slack.event.group_left
   subscriber:
     ref:
       apiVersion: v1
