--- a/platform/resources/6-eventing/triggers/mongodb/slack-user-installed-app.trigger.yaml
+++ b/platform/resources/6-eventing/triggers/mongodb/slack-user-installed-app.trigger.yaml
@@ -7,7 +7,7 @@ spec:
   broker: default
   filter:
     attributes:
-      type: slack_user_installed_app
+      type: hypsibius.slack.user_installed_app
   subscriber:
     ref:
       apiVersion: v1
