--- a/platform/resources/7-slack/slack-events.ingress.yaml
+++ b/platform/resources/7-slack/slack-events.ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   namespace: slack
 ---
-apiVersion: serving.knative.dev/v1alpha1
+apiVersion: serving.knative.dev/v1beta1
 kind: DomainMapping
 metadata:
   name: sunfish-generous-imp.ngrok-free.app
