--- a/platform/resources/6-eventing/triggers/slack-channel-left.trigger.yaml
+++ b/platform/resources/6-eventing/triggers/slack-channel-left.trigger.yaml
@@ -1,15 +1,16 @@
 apiVersion: eventing.knative.dev/v1
 kind: Trigger
 metadata:
-  name: slack-member-left-channel
-  namespace: mongodb
+  name: slack-channel-left
+  namespace: eventing
 spec:
   broker: default
   filter:
     attributes:
-      type: slack.event.member_left_channel
+      type: slack.event.channel_left
   subscriber:
     ref:
       apiVersion: v1
       kind: Service
       name: slack-channel-management
+      namespace: mongodb
