--- a/platform/resources/6-eventing/triggers/slack-group-left.trigger.yaml
+++ b/platform/resources/6-eventing/triggers/slack-group-left.trigger.yaml
@@ -1,15 +1,16 @@
 apiVersion: eventing.knative.dev/v1
 kind: Trigger
 metadata:
-  name: slack-app-home-opened
-  namespace: mongodb
+  name: slack-group-left
+  namespace: eventing
 spec:
   broker: default
   filter:
     attributes:
-      type: slack.event.app_home_opened
+      type: slack.event.group_left
   subscriber:
     ref:
       apiVersion: v1
       kind: Service
-      name: slack-app-home-opened
+      name: slack-channel-management
+      namespace: mongodb
