--- a/platform/utils/message-types/package.json
+++ b/platform/utils/message-types/package.json
@@ -39,6 +39,8 @@
   },
   "dependencies": {
     "@slack/bolt": "^3.13.2",
+    "@slack/oauth": "^2.6.1",
+    "@slack/web-api": "^6.9.0",
     "mongoose": "^7.4.1"
   }
 }
